made donate heading red

--- a/src/donate.html
+++ b/src/donate.html
@@ -40,7 +40,7 @@
   		<div id="page">
         <div id="content">
   				<div class="title">
-  					<h1>Make a Donation</h1>
+  					<h1 id="red">Make a Donation</h1>
   					<p>Every little bit helps. Act for Kids relies heavily on donations to support our intensive therapy programs for kids who have experienced abuse and neglect, and early support for families at risk. Your donation will help us keep our doors open and expand our services – our kids can’t thank you directly, but know you’ve made a big difference to little lives.</p>
   					<h3>Single Donation</h3>
   					<p>Donations over $2 are tax deductible. Every donation, big or small, combines to make a real difference.</p>
