you are all crazy people who did excessive coding when you could have made all the 'h1's red with one line os CSS for the whole site.... also, i fixed the home page...

--- a/src/donators.html
+++ b/src/donators.html
@@ -30,9 +30,9 @@
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contacts</a></li>
             <li><a href="donate.html">Donations</a></li>
-			<li><a class="current_page" href="donators.html">Donators</a></li>
+			      <li><a class="current_page" href="donators.html">Donators</a></li>
             <li><a href="services.html">Services</a></li>
-			<li><a href="sponsors.html">Sponsors</a></li>
+			      <li><a href="sponsors.html">Sponsors</a></li>
           </ul>
     		</div>
         <embed src="media/rddi.mp3" loop="true" autostart="false" hidden="false" />
@@ -40,7 +40,7 @@
       <div id="page">
     		<div id="content">
           <div class="title">
-            <h1 id="red">Thanks to All of Our Wonderful Donators!</h1>
+            <h1>Thanks to All of Our Wonderful Donators!</h1>
             <p>We at Act for Kids would like to thank all of our wonderful donators for their generous contributions to act for kids to support our cause.</p>
           </div>
           <div class="donator-grid">
@@ -95,8 +95,8 @@
 						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\ivor baudin.jpg" alt="" /></a>
 						<h3>Ivor Baudin</h3>
 						<p>Total Donated: $745</p>
-						<p>Recently Donated: $150</p> 
-					</td>	
+						<p>Recently Donated: $150</p>
+					</td>
 					<td>
 						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\yancy norman.jpg" alt="" /></a>
 						<h3>Yancy Norman</h3>
@@ -115,8 +115,8 @@
 						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\marcel baker.jpg" alt="" /></a>
 						<h3>Marcel Baker</h3>
 						<p>Total Donated: $499</p>
-						<p>Recently Donated: $19</p> 
-						
+						<p>Recently Donated: $19</p>
+
 					</td>
 					<td>
 						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\catrina blevins.jpg" alt="" /></a>
@@ -135,9 +135,9 @@
 					<td>
 						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\sheridan frost.jpg" alt="" /></a>
 						<h3>Sheridan Frost</h3>
-						<p>Total Donated: $150</p> 
+						<p>Total Donated: $150</p>
 						<p>Recently Donated: $50</p>
-					</td>	
+					</td>
 					<td>
 						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\korbin claufield.jpg" alt="" /></a>
 						<h3>Korbin Caulfield</h3>
