--- a/src/index.html
+++ b/src/index.html
@@ -40,23 +40,27 @@
     	<div id="page">
     		<div id="content">
           <div class="title">
-            <h1 id="red">Welcome to Act For Kids!</h1>
+            <h1>Welcome to Act For Kids!</h1>
           </div>
+          <div class="article">
+            <h2> A Quick Bit About Us</h2>
+            <p>Act for Kids is an Australian charity providing free therapy and support services to children and families who have experienced, or are at risk of child abuse and neglect. We have helped thousands of children and families for over 28 years. Act for Kids operates 22 centres with a team of over 300 staff from Adelaide all the way up to the Cape York Peninsula. Our services have expanded to include integrated therapy, support for vulnerable families, special workshops to empower kids and safe houses in remote Aboriginal communities.</p>
+		      </div>
           <div class="slideshow-container">
             <div class="mySlides fade">
-              <img src="images\banner1.jpg" style="width:100%">
               <div class="caption">Galaxies From Far Far Away Unite For Charity</div>
+              <img src="images\banner1.jpg">
             </div>
             <div class="mySlides fade">
-              <img src="images\banner2.jpg" style="width:100%">
               <div class="caption">China Trekkers Raising Big Dollars For Little Lives</div>
+              <img src="images\banner2.jpg">
             </div>
             <div class="mySlides fade">
-              <img src="images\banner3.jpg" style="width:100%">
+              <img src="images\banner3.jpg">
               <div class="caption">Bundaberg Kids Learn To Keep Safe With Emmy</div>
             </div>
             <div class="mySlides fade">
-              <img src="images\banner4.jpg" style="width:100%">
+              <img src="images\banner4.jpg">
               <div class="caption">CMC Rocks Gets Behind Act for Kids</div>
             </div>
             <script>
@@ -70,15 +74,11 @@
                       }
                     slideIndex++;
                     if (slideIndex> slides.length) {slideIndex = 1}
-                    slides[slideIndex-1].style.display = "static";
+                    slides[slideIndex-1].style.display = "block";
                     setTimeout(showSlides, 4000); // Change image every 4 seconds
                   }
             </script>
           </div>
-          <div class="article">
-            <h2 id="red"> A Quick Bit About Us</h2>
-            <p>Act for Kids is an Australian charity providing free therapy and support services to children and families who have experienced, or are at risk of child abuse and neglect. We have helped thousands of children and families for over 28 years. Act for Kids operates 22 centres with a team of over 300 staff from Adelaide all the way up to the Cape York Peninsula. Our services have expanded to include integrated therapy, support for vulnerable families, special workshops to empower kids and safe houses in remote Aboriginal communities.</p>
-		      </div>
         </div>
       </div>
     </div>
