There, now it's globally set in CSS for all h1 tags....lazy bastards

--- a/src/donate-offline.html
+++ b/src/donate-offline.html
@@ -30,9 +30,9 @@
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contacts</a></li>
             <li><a class="current_page" href="donate.html">Donations</a></li>
-			<li><a href="donators.html">Donators</a></li>
+			      <li><a href="donators.html">Donators</a></li>
             <li><a href="services.html">Services</a></li>
-			<li><a href="sponsors.html">Sponsors</a></li>
+			      <li><a href="sponsors.html">Sponsors</a></li>
           </ul>
     		</div>
         <embed src="media/rddi.mp3" loop="true" autostart="false" hidden="false" />
@@ -41,7 +41,7 @@
     		<div id="content">
     			<div>
     				<header class="page-header">
-  <h1 id="red"><center>Donate offline</center></h1>
+  <h1><center>Donate offline</center></h1>
 </header>
 <p style="text-align: left;"><strong>By phone</strong></p>
 <p style="text-align: left;">To make a donation with your debit or credit card over the phone, please call our office on <a style="display: inline-block;" href="tel:1300228000">1300 228 000</a>.</p>
@@ -96,7 +96,7 @@ Qld 4064</p>
 		<br>
 	<div id="socialmedia">
 			<p><b>Join us on Social Media</b></p>
-			
+
 			<center><a href="https://www.facebook.com/ActforKids/">
 			<img border="0" alt="facebook widget" src="images/facebook widget.jpg" width="45px" height="35px">
 			</a>
@@ -109,7 +109,7 @@ Qld 4064</p>
 			<a href="https://www.youtube.com/user/ACTforKids">
 			<img border="0" alt="youtube widget" src="images/youtube widget.jpg" width="45px" height="35px">
 			</center></a>
-	</div>	
+	</div>
    		</div>
 			</div>
 		</div>
