--- a/src/services.html
+++ b/src/services.html
@@ -41,7 +41,7 @@
     		<div id="content">
     			<div class="article">
     				<div class="title">
-						  <h1 id="red">Help Services</h1>
+						  <h1>Help Services</h1>
     					<span class="byline">Act for Kids proudly offer a range of support services to both children and their families!</span>
       				<span class="image image-full"><img src="images/HelpingChildren.jpg" alt="" /></span>
       				<p>Act for kids is an organisation dedicated to making kids lives better, and to do this we offer many different service ranging from therapy from abuse and neglect trauma to providing safe homes for those under child protection orders.</p>
