--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -40,9 +40,9 @@
     	<div id="page">
     		<div id="content">
   				<div class="title">
-    				<h1 id="red">Our corporate partners and sponsors</h1>
+    				<h1>Our corporate partners and sponsors</h1>
     				<p>Our generous sponsors give us so much more than money; many also provide pro-bono services and help us spread our message far and wide. Many of their amazing staff also volunteer to help us when we need an extra set of hands.</p>
-  				  <h1 id="red">Official Partners</h1>
+  				  <h1>Official Partners</h1>
 				  </div>
           <div class="sponsor-grid">
             <table>
