--- a/src/about.html
+++ b/src/about.html
@@ -41,7 +41,7 @@
     		<div id="content">
 			    <img src="images\about picture.png" alt="bear logo" width=100%>
   				<div class="title">
-				    <h1>About Act for kids</h1>
+				    <h1>About Act for Kids</h1>
             <p>Act for Kids is an Australian charity providing free therapy and support services to children and families who have experienced, or are at risk of child abuse and neglect. We have helped thousands of children and families for over 28 years. Act for Kids operates 22 centres with a team of over 300 staff from Adelaide all the way up to the Cape York Peninsula. Our services have expanded to include integrated therapy, support for vulnerable families, special workshops to empower kids and safe houses in remote Aboriginal communities.</p>
           </div>
           <div class="thirds">
