--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -40,7 +40,7 @@
     	<div id="page">
     		<div id="content">
   				<div class="title">
-    				<h1 id="red">Our corporate partners and sponsors</h1>
+    				<h1 id="red">Our Corporate Partners and Sponsors</h1>
     				<p>Our generous sponsors give us so much more than money; many also provide pro-bono services and help us spread our message far and wide. Many of their amazing staff also volunteer to help us when we need an extra set of hands.</p>
   				  <h1 id="red">Official Partners</h1>
 				  </div>
