--- a/src/donate-offline.html
+++ b/src/donate-offline.html
@@ -39,83 +39,67 @@
     	</div>
     	<div id="page">
     		<div id="content">
-    			<div>
-    				<header class="page-header">
-  <h1><center>Donate offline</center></h1>
-</header>
-<p style="text-align: left;"><strong>By phone</strong></p>
-<p style="text-align: left;">To make a donation with your debit or credit card over the phone, please call our office on <a style="display: inline-block;" href="tel:1300228000">1300 228 000</a>.</p>
-<p style="text-align: left;"><strong>Bank deposit</strong></p>
-<p style="text-align: left;">You can deposit your donation in person at the bank or make a direct transfer to our bank account.</p>
-<table class="alignleft" style="height: 286px; float: none !important;" border="1" width="317" cellspacing="0" cellpadding="0">
-<tbody>
-<tr>
-<td valign="top" width="92"><strong>Bank</strong></td>
-<td valign="top" width="78">Westpac</td>
-</tr>
-<tr>
-<td valign="top" width="92"><strong>Account name</strong></td>
-<td valign="top" width="78">Act for Kids</td>
-</tr>
-<tr>
-<td valign="top" width="92"><strong>BSB</strong></td>
-<td valign="top" width="78">034 013</td>
-</tr>
-<tr>
-<td valign="top" width="92"><strong>Account number</strong></td>
-<td valign="top" width="78">283017</td>
-</tr>
-<tr>
-<td valign="top" width="92"><strong>Reference</strong></td>
-<td valign="top" width="78">Your name</td>
-</tr>
-</tbody>
-</table>
-<p style="text-align: left;">Please advise us at <a style="display: inline-block;" href="tel:1300228000">1300 228 000</a> or email <a href="mailto:donations@actforkids.com.au">donations@actforkids.com.au</a> with the transaction details (date, amount, full name and mailing address) so we can allocate your donation and send you a receipt.</p>
-<p style="text-align: left;"><strong>By post<br>
-</strong><br>
-Cheques and money orders should be made payable to:</p>
-<p style="text-align: left;">Act for Kids<br>
-PO Box 1844<br>
-Milton<br>
-Qld 4064</p>
-<p style="text-align: left;">Don’t forget to provide us with your contact details so we can post a receipt.</p>
-<p style="text-align: left;">To make a credit card donation via post, simply download the <a href="DONATION-FORM.pdf">donation form</a>&nbsp;and return it to the address provided at the bottom of the form.</p>
-	</article>
-            </main>
-						<br>
-						<br>
-						<br>
-    			</div>
-    		</div>
+  				<div class="title">
+            <h1>Donate Offline</h1>
+          </div>
+          <p style="text-align: left;"><strong>By phone</strong></p>
+          <p style="text-align: left;">To make a donation with your debit or credit card over the phone, please call our office on <a style="display: inline-block;" href="tel:1300228000">1300 228 000</a>.</p>
+          <p style="text-align: left;"><strong>Bank deposit</strong></p>
+          <p style="text-align: left;">You can deposit your donation in person at the bank or make a direct transfer to our bank account.</p>
+          <table class="alignleft" style="height: 286px; float: none !important;" border="1" width="317" cellspacing="0" cellpadding="0">
+            <tbody>
+              <tr>
+                <td valign="top" width="92"><strong>Bank</strong></td>
+                <td valign="top" width="78">Westpac</td>
+              </tr>
+              <tr>
+                <td valign="top" width="92"><strong>Account name</strong></td>
+                <td valign="top" width="78">Act for Kids</td>
+              </tr>
+              <tr>
+                <td valign="top" width="92"><strong>BSB</strong></td>
+                <td valign="top" width="78">034 013</td>
+              </tr>
+              <tr>
+                <td valign="top" width="92"><strong>Account number</strong></td>
+                <td valign="top" width="78">283017</td>
+              </tr>
+              <tr>
+                <td valign="top" width="92"><strong>Reference</strong></td>
+                <td valign="top" width="78">Your name</td>
+              </tr>
+            </tbody>
+          </table>
+          <p style="text-align: left;">Please advise us at <a style="display: inline-block;" href="tel:1300228000">1300 228 000</a> or email <a href="mailto:donations@actforkids.com.au">donations@actforkids.com.au</a> with the transaction details (date, amount, full name and mailing address) so we can allocate your donation and send you a receipt.</p>
+          <p style="text-align: left;"><strong>By post<br>
+          </strong>
+          <br>
+          Cheques and money orders should be made payable to:</p>
+          <p style="text-align: left;">Act for Kids<br>
+          PO Box 1844<br>
+          Milton<br>
+          Qld 4064</p>
+          <p style="text-align: left;">Don’t forget to provide us with your contact details so we can post a receipt.</p>
+          <p style="text-align: left;">To make a credit card donation via post, simply download the <a href="DONATION-FORM.pdf">donation form</a>&nbsp;and return it to the address provided at the bottom of the form.</p>
         </div>
-    	</div>
-		<br>
-		<br>
-		<br>
-		<br>
-	<div id="socialmedia">
-			<p><b>Join us on Social Media</b></p>
-
-			<center><a href="https://www.facebook.com/ActforKids/">
-			<img border="0" alt="facebook widget" src="images/facebook widget.jpg" width="45px" height="35px">
-			</a>
-			<a href="https://twitter.com/ACTforKids">
-			<img border="0" alt="twitter widget" src="images/twitter widget.jpg" width="45px" height="35px">
-			</a>
-			<a href="https://www.instagram.com/actforkids/">
-			<img border="0" alt="instagram widget" src="images/instagram widget.jpg" width="45px" height="35px">
-			</a>
-			<a href="https://www.youtube.com/user/ACTforKids">
-			<img border="0" alt="youtube widget" src="images/youtube widget.jpg" width="45px" height="35px">
-			</center></a>
-	</div>
-   		</div>
-			</div>
-		</div>
-		</div>
+      </div>
     </div>
     <div id="copyright">
+      <div id="socialmedia">
+        <p><b>Join us on Social Media</b></p>
+        <center><a href="https://www.facebook.com/ActforKids/">
+        <img border="0" alt="facebook widget" src="images/facebook widget.jpg" width="45px" height="35px">
+        </a>
+        <a href="https://twitter.com/ACTforKids">
+        <img border="0" alt="twitter widget" src="images/twitter widget.jpg" width="45px" height="35px">
+        </a>
+        <a href="https://www.instagram.com/actforkids/">
+        <img border="0" alt="instagram widget" src="images/instagram widget.jpg" width="45px" height="35px">
+        </a>
+        <a href="https://www.youtube.com/user/ACTforKids">
+        <img border="0" alt="youtube widget" src="images/youtube widget.jpg" width="45px" height="35px">
+        </center></a>
+      </div>
    	  <p>&copy; Copyright 2017 Act for Kids. All rights reserved | ABN 98 142 986 767 |</a></p>
     </div>
   </body>
