i forgot to save this file...oopss

--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -40,11 +40,7 @@
     	<div id="page">
     		<div id="content">
   				<div class="title">
-<<<<<<< HEAD
-    				<h1>Our corporate partners and sponsors</h1>
-=======
-    				<h1 id="red">Our Corporate Partners and Sponsors</h1>
->>>>>>> 0181832a2b5b69e709083869f61a8f1a57e2b323
+    				<h1>Our Corporate Partners and Sponsors</h1>
     				<p>Our generous sponsors give us so much more than money; many also provide pro-bono services and help us spread our message far and wide. Many of their amazing staff also volunteer to help us when we need an extra set of hands.</p>
   				  <h2>Official Partners</h2>
 				  </div>
