--- a/src/contact.html
+++ b/src/contact.html
@@ -61,80 +61,99 @@
             <h4>If you are a donor and would like to update your personal information, make a donation or have a general inquiry about making a donation please contact us below:</h4>
         			<p>Phone: <b>1300 228 000</b></p>
         			<p>Email:<a href="mailto:mail@actforkids.com.au?Subject=Enquiry%20" target="_top">mail@actforkids.com.au</a></p>
-      			<h2 id="red">National office</h2>
-      			   <p>1/9 Gardner Cl, Brisbane City QLD 4064</p>
-            <h2 id="red">Act for Kids Service centers</h2>
-      			<h4>Adelaide</h4>
+      			<h2 id="red">National office:</h2>
+      			   <p><strong>1/9 Gardner Cl, Brisbane City QLD 4064</strong></p>
+				   		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5006.131260477806!2d153.00136246793963!3d-27.473326160186225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b9150bb32d644fb%3A0x9f28656164ff5cb8!2sAct+for+Kids!5e0!3m2!1sen!2sus!4v1500945736575" width="930" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+            <h2 id="red">Act for Kids Service centers:</h2>
+			 <div class="sponsor-grid1">
+            <table>
+  					  <tr>
+                <td><h4>Adelaide</h4>
         			<p>275 Main North Road, Enfield, South Australia, Australia</p>
         			<p>Phone: (08) 8440 8557</p>
-        			<p>Fax: (08) 8440 8559</p>
-      			<h4>Aurukun Safe House</h4>
+        			<p>Fax: (08) 8440 8559</p></td>
+        				<td><h4>Aurukun Safe House</h4>
         			<p>229 Circular Way, Aurukun, QLD, 4871, Australia</p>
         			<p>Phone: (07) 4060 6229</p>
-        			<p>Fax: (07) 4060 6038</p>
-      			<h4>Cairns</h4>
+        			<p>Fax: (07) 4060 6038</p></td>
+        				<td><h4>Cairns</h4>
         			<p>Unit 3, 202 Scott Street Bungalow, QLD, 4870</p>
         			<p>Phone: (07) 4033 8500</p>
-        			<p>Fax: (07) 4033 5811</p>
-      			<h4>Cairns – SafeKIDS Program (servicing in Doomadgee & West Cape York)</h4>
+        			<p>Fax: (07) 4033 5811</p></td>
+              </tr>
+  						<tr>
+                <td><h4>Cairns – SafeKIDS Program (servicing in Doomadgee & West Cape York)</h4>
         			<p>Earlville, QLD, 4870, Australia</p>
         			<p>Phone: (07) 4033 8517</p>
-        			<p>Fax: (07) 4033 8575</p>
-      			<h4>Doomadgee Safe House</h4>
+        			<p>Fax: (07) 4033 8575</p></td>
+        				<td><h4>Doomadgee Safe House</h4>
               <p>Cnr Goodeedawa Road and Gunnulunja Drive, Doomadgee QLD 4830</p>
         			<p>Phone: (07) 4745 8348</p>
-        			<p>Fax: (07) 4745 8154</p>
-      			<h4>Gympie</h4>
+        			<p>Fax: (07) 4745 8154</p></td>
+        				<td><h4>Gympie</h4>
         			<p>3 Clematis Street, Gympie, Queensland, Australia</p>
         			<p>Phone: (07) 5483 9220</p>
-        			<p>Fax: (07) 5482 5180</p>
-      			<h4>Ipswich</h4>
+        			<p>Fax: (07) 5482 5180</p></td>
+              </tr>
+  						<tr>
+                <td><h4>Ipswich</h4>
         			<p>Brisbane Street, Ipswich, QLD, 4305, Australia</p>
-        			<p>Phone: (07) 3202 1488</p>
-      			<h4>Kowanyama Safe House</h4>
+        			<p>Phone: (07) 3202 1488</p></td>
+        				<td><h4>Kowanyama Safe House</h4>
         			<p>334-335 Karrenganang Street, Kowanyama QLD 4817</p>
-        			<p>Fax: (07) 4060 5031</p>
-      			<h4>Labrador</h4>
+        			<p>Fax: (07) 4060 5031</p></td>
+        				<td><h4>Labrador</h4>
         			<p>Olsen Avenue, Labrador, Queensland, Australia</p>
-        			<p>Phone: (07) 5656 8600</p>
-      			<h4>Maroochydore</h4>
+        			<p>Phone: (07) 5656 8600</p></td>
+              </tr>
+  						<tr>
+                <td><h4>Maroochydore</h4>
         			<p>33 Dalton Drive, Maroochydore, Queensland, Australia</p>
-        			<p>Phone: (07) 5451 8299 or 13 32 64</p>
-      			<h4>Maryborough</h4>
+        			<p>Phone: (07) 5451 8299 or 13 32 64</p></td>
+        				<td><h4>Maryborough</h4>
         			<p>111 Cheapside Street, Maryborough, Queensland, Australia</p>
-        			<p>Phone: (07) 4122 9100</p>
-      			<h4>Nambour</h4>
+        			<p>Phone: (07) 4122 9100</p></td>
+        				<td><h4>Nambour</h4>
         			<p>76 Nambour Connection Road, Woombye, Queensland, Australia</p>
-        			<p>Phone: (07) 5442 1517</p>
-      			<h4>Napranum Safe House</h4>
+        			<p>Phone: (07) 5442 1517</p></td>
+              </tr>
+  						<tr>
+                <td><h4>Napranum Safe House</h4>
         			<p>411 Moun-Ding Street, Napranum, QLD, 4874, Australia</p>
         			<p>Phone: (07) 4069 9351</p>
-        			<p>Fax: (07) 4069 9840</p>
-      			<h4>Pormpuraaw Safe House</h4>
+        			<p>Fax: (07) 4069 9840</p></td>
+                <td><h4>Pormpuraaw Safe House</h4>
         			<p>Crn Korka & Ngurrin Streets, Porpuraaw QLD 4871</p>
         			<p>Phone: (07) 4060 4093</p>
-        			<p>Fax: (07) 4060 4093</p>
-      			<h4>Toowoomba / Roma</h4>
+        			<p>Fax: (07) 4060 4093</p></td>
+        				<td><h4>Toowoomba / Roma</h4>
         			<p>University of Southern Queensland, West Street, Darling Heights, Queensland, Australia</p>
         			<p>Phone: (07) 4687 0200</p>
-        			<p>Fax: 07 4613 5666</p>
-      			<h4>Townsville</h4>
+        			<p>Fax: 07 4613 5666</p></td>
+              </tr>
+  						<tr>
+                <td><h4>Townsville</h4>
         			<p>James Cook University, Endeavour Drive, Townsville, Queensland</p>
         			<p>Phone: (07) 4755 8777</p>
-        			<p>Fax: (07) 4755 8700</p>
-    			  <h4>West Burleigh</h4>
+        			<p>Fax: (07) 4755 8700</p></td>
+                <td><h4>West Burleigh</h4>
         			<p>21 Tallebudgera Creek Road, Burleigh Heads, Queensland, Australia</p>
         			<p>Phone: (07) 5508 3800</p>
-        			<p>Fax: 07 5508 3811</p>
-      			<h4>Western Sydney</h4>
+        			<p>Fax: 07 5508 3811</p></td>
+        				<td><h4>Western Sydney</h4>
         			<p>18/125 Main Street, Blacktown, New South Wales, Australia</p>
         			<p>Phone: (02) 9622 7636</p>
-        			<p>Fax: (02) 9676 2663</p>
-      			<h4>Wooloowin</h4>
-        			<p>80 Kedron Park Road, Wooloowin, Queensland, Australia</p>
-        			<p>Phone: (07) 3357 9444</p>
-        			<p>Fax: (07) 3857 8626</p>
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5006.131260477806!2d153.00136246793963!3d-27.473326160186225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b9150bb32d644fb%3A0x9f28656164ff5cb8!2sAct+for+Kids!5e0!3m2!1sen!2sus!4v1500945736575" width="930" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+        			<p>Fax: (02) 9676 2663</p></td>
+              </tr>
+            </table>
+			<br>
+			<br>
+
+          </div>
+  			</div>
+    	</div>
+    </div>
 
           </div>
         </div>
