Fixed up spelling error
WE ARE IN AUSTRALIA NOT AMERICA

--- a/src/contact.html
+++ b/src/contact.html
@@ -65,7 +65,7 @@
       			   <p><strong>1/9 Gardner Cl, Brisbane City QLD 4064</strong></p>
 				   		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5006.131260477806!2d153.00136246793963!3d-27.473326160186225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b9150bb32d644fb%3A0x9f28656164ff5cb8!2sAct+for+Kids!5e0!3m2!1sen!2sus!4v1500945736575" width="930" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 
-            <h2 id="red">Act for Kids Service centers:</h2>
+            <h2 id="red">Act for Kids Service Centres:</h2>
 			 <div class="sponsor-grid1">
             <table>
   					  <tr>
