updated and made more effecient about page thirds padding and centering

--- a/src/about.html
+++ b/src/about.html
@@ -47,15 +47,15 @@
           <div class="thirds">
             <div>
               <h3>Our Purpose</h3>
-              <p><center>To prevent and treat child abuse and neglect.</center></p>
+              <p>To prevent and treat child abuse and neglect.</p>
             </div>
             <div>
               <h3>Our Vision</h3>
-              <p><center>All kids have a safe and happy childhood, free from abuse and neglect.</center></p>
+              <p>All kids have a safe and happy childhood, free from abuse and neglect.</p>
             </div>
             <div>
               <h3>Our Values</h3>
-              <p><center>We are a professional, ethical team who is caring, courageous and collaborative.</center></p>
+              <p>We are a professional, ethical team who is caring, courageous and collaborative.</p>
             </div>
           </div>
     		</div>
