Made services JS  better :/

--- a/src/services.html
+++ b/src/services.html
@@ -7,38 +7,46 @@
     <script>
       function myFunction1() {
         var x = document.getElementById('article1');
-        if (x.style.display === 'block') {
-            x.style.display = 'none';
-        } else {
-            x.style.display = 'block';
-        }
+        var a = document.getElementById('article2');
+        var b = document.getElementById('article3');
+        var c = document.getElementById('article4');
+        x.style.display = 'block';
+        a.style.display = 'none';
+        b.style.display = 'none';
+        c.style.display = 'none';
       }
 
       function myFunction2() {
         var x = document.getElementById('article2');
-        if (x.style.display === 'block') {
-            x.style.display = 'none';
-        } else {
-            x.style.display = 'block';
-        }
+        var a = document.getElementById('article1');
+        var b = document.getElementById('article3');
+        var c = document.getElementById('article4');
+        x.style.display = 'block';
+        a.style.display = 'none';
+        b.style.display = 'none';
+        c.style.display = 'none';
       }
 
       function myFunction3() {
         var x = document.getElementById('article3');
-        if (x.style.display === 'block') {
-            x.style.display = 'none';
-        } else {
-            x.style.display = 'block';
-        }
+        var a = document.getElementById('article2');
+        var b = document.getElementById('article1');
+        var c = document.getElementById('article4');
+        x.style.display = 'block';
+        a.style.display = 'none';
+        b.style.display = 'none';
+        c.style.display = 'none';
       }
 
       function myFunction4() {
         var x = document.getElementById('article4');
-        if (x.style.display === 'block') {
-            x.style.display = 'none';
-        } else {
-            x.style.display = 'block';
-        }
+        var a = document.getElementById('article2');
+        var b = document.getElementById('article3');
+        var c = document.getElementById('article1');
+        x.style.display = 'block';
+        a.style.display = 'none';
+        b.style.display = 'none';
+        c.style.display = 'none';
       }
     </script>
   </head>
